# DM_Scan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: detect_threshold.yaml
docs/: algorithm_test_plan.md  annual_progress_2025.md  api_guide.md  architecture.md  dev_eval_sop.md  development_todolist.md  handover_defect_detection.md  index.md  legacy_cleanup.md  pipeline.md  project_summary.md  test_plan.md  troubleshooting.md
examples/minimal_data/: README.md  sample_images.csv
scripts/: make_demo_webp.py
src/microlens_defects/: __init__.py  exceptions.py  logging.py
src/microlens_defects/cli/: app.py
src/microlens_defects/data/: db.py
src/microlens_defects/detection/: __init__.py  base.py  features.py  masks.py  params.py  rendering.py  threshold.py
src/microlens_defects/features/: five_step_phase.py
src/microlens_defects/semi/: __init__.py
src/microlens_defects/viz/: __init__.py
tests/: conftest.py  test_detector.py  test_features.py  test_five_step_phase.py  test_masks.py  test_params.py  test_threshold_params.py
