[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microlens-defects"
version = "0.3.0"
description = "Defocus microlens defect detection: data IO, classical thresholding baseline, and ML-ready tooling."
authors = [{ name = "Microlens Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "typer>=0.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.8",
]

[project.scripts]
microlens-defects = "microlens_defects.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["microlens_defects*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E203",   # Whitespace before ':'
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (needed for Typer)
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
